--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -582,6 +582,12 @@
     "ViewDetails": "View full technical details to be submitted",
     "Description": "We have encountered an error while loading this page. Be a fellow superhero and help us improve our service by sending us a bug report. Only technical details and no personal data will be submitted.",
     "DescriptionTitle": "Bug description",
-    "Send": "Send a report"
+    "Send": "Send a report",
+    "Placeholder": "Describe the bug you encountered (optional)",
+    "Success": {
+      "Title": "Thank you!",
+      "SubTitle": "Your bug report has been submitted.",
+      "Description": "Thank you for being such a wonderful fellow superhero. The information provided will help us to improve our product and services for the benefit of the whole Superhero community."
+    }
   }
 }
