--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -696,7 +696,8 @@
     "Success": {
       "Title": "Thank you!",
       "SubTitle": "Your bug report has been submitted.",
-      "Description": "Thank you for being such a wonderful fellow superhero. The information provided will help us to improve our product and services for the benefit of the whole Superhero community."
+      "Description": "Thank you for being such a wonderful fellow superhero. The information provided will help us to improve our product and services for the benefit of the whole Superhero community.",
+      "Return": "Return to website"
     }
   }
 }
