--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -505,7 +505,7 @@
       "Navigation": {
         "feed": "Feed",
         "MyProfile": "My Profile",
-        "League": "League",
+        "Updates": "Updates",
         "WordBazaar": "WordBazaar",
         "Governance": "Voting"
       },
